# 3D-Scene-Understanding

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  requirements.txt
data/Dataset_for_confs/: dataset.csv
data/depth/: depthMat  depthMat2  depthMat5
data/rgb/: rgbMat  rgbMat2  rgbMat5
modules/: main.cpp
modules/ml_model/: 3D_Scene_Understanding.ipynb  create_dataset.py
modules/preprocessing/: libfreenect2_grabber.cpp  libfreenect2_grabber.hpp  loader.hpp  point_cloud.hpp
modules/segmentation/utils/: edges.hpp  generic_point_cloud.hpp  metrics.hpp  nodes.hpp  normals.hpp  planar_segmentation.hpp
modules/segmentation/visualization/: colorMaps.hpp  visualizer.hpp
